# daily-learner

./: README.md  pyproject.toml
config/: default-config.yaml
src/: cli.py  config.py  llm.py  pipeline.py
src/deliver/: session.py
src/extract/: __init__.py  extractor.py
src/generate/: __init__.py  generator.py
src/ingest/: __init__.py  memory_logs.py  openclaw_logs.py  sessions.py
src/tracker/: tracker.py
src/web/: app.py
src/web/static/: style.css
src/web/templates/: index.html
